// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GradientButton Component matches snapshot on initial render 1`] = `
<TouchableOpacity
  activeOpacity={0.8}
  onPress={[MockFunction]}
  style={
    Object {
      "borderRadius": 8,
      "height": 56,
      "maxWidth": "100%",
    }
  }
>
  <LinearGradient
    colors={
      Array [
        "rgb(145, 25, 66)",
        "rgb(210, 45, 105)",
      ]
    }
    end={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    start={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "fontWeight": "normal",
          "paddingTop": 5,
        }
      }
    >
      Test
    </Text>
  </LinearGradient>
</TouchableOpacity>
`;

exports[`GradientButton Component renders the button with custom styles 1`] = `
<TouchableOpacity
  activeOpacity={0.8}
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  style={
    Object {
      "borderRadius": 8,
      "height": 30,
      "marginHorizontal": 40,
      "maxWidth": "100%",
    }
  }
>
  <LinearGradient
    colors={
      Array [
        "rgb(145, 25, 66)",
        "rgb(210, 45, 105)",
      ]
    }
    end={
      Object {
        "x": 1,
        "y": 0,
      }
    }
    start={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "fontWeight": "normal",
          "paddingTop": 5,
        }
      }
    >
      Test
    </Text>
  </LinearGradient>
</TouchableOpacity>
`;
